--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 DISABLE_ESLINT_PLUGIN=true
 
 # API Base URL
-REACT_APP_API_URL=https://shop-sphere-backend-q13s.onrender.com
+# REACT_APP_API_URL=https://shop-sphere-backend-q13s.onrender.com
